--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vendor/github.com/go-yaml/yaml"]
 	path = vendor/github.com/go-yaml/yaml
 	url = https://github.com/go-yaml/yaml.git
+[submodule "vendor/github.com/peterh/liner"]
+	path = vendor/github.com/peterh/liner
+	url = https://github.com/peterh/liner
