--- a/config/ser2net.yaml
+++ b/config/ser2net.yaml
@@ -1,22 +1,21 @@
 streams:
    - name : ser2net
      modules :
-       - name     : pipe
-         module   : pipe
+       - name     : "pipe"
+         module   : "pipe"
          config :
-           tap  : true
-       - name     : serial
-         module   : serial
-         upstream : pipe
-         config  :
-            port : 7375
-            bind : 0.0.0.0/0
-       - name     : net
-         module   : tcp_server
-         upstream : pipe
+           tap  : "false"
+       - name     : "serial"
+         module   : "serial"
+         upstream : "pipe"
          config    :
-            port   : /dev/ttys012
-            baud   : 38400
-            parity : N
-            bits   : 8
-            stop   : 1
+            port   : "/dev/ttys005"
+            baud   : "38400"
+            parity : "N"
+            data_bits   : "8"
+            stop_bits   : "1"
+       - name     : "net"
+         module   : "tcp_server"
+         upstream : "pipe"
+         config  :
+            address : ":7375"
