--- a/config/ser2net.yaml
+++ b/config/ser2net.yaml
@@ -9,11 +9,12 @@ streams:
          module   : "serial"
          upstream : "pipe"
          config    :
-            port   : "/dev/ttys005"
+            port   : "/dev/tty.SLAB_USBtoUART"
             baud   : "38400"
             parity : "N"
             data_bits   : "8"
             stop_bits   : "1"
+            rts_cts     : "true"
        - name     : "net"
          module   : "tcp_server"
          upstream : "pipe"
